--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,65 @@
 /* This is an example of how to import a partial scss file*/
 @import '_variables';
 
+* {
+  border: 2px solid red;
+}
+
+
 body {
-  background: $primary-background;
+  background: $secondary-background;
+  background-size: cover;
+}
+
+header, h1 {
+  font-size: 2em;
+}
+
+button {
+  border: 2px solid black;
+  border-radius: 5px;
+  background: none;
+  cursor: pointer;
+}
+
+main {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 33% 33% 33%;
+}
+
+.login {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.login-request {
+  font-size: 1.5em;
+}
+
+.dashboard {
+  grid-column: span 5;
+  grid-row: span 5;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 33% 33% 33%;
+}
+
+.customer-dashboard {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.customer-bookings-box {
+  display: grid;
+  grid-gap: 1em;
+  grid-column: span 2;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: minmax(10%, auto);
+}
+
+.hidden {
+  display: none;
 }
