--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,2 +1,7 @@
 $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+$secondary-background: url('../images/overlook-main.jpg');
+$single-room: url();
+$junior-suite: url();
+$suite: url();
+$residential-suite: url();
 ;
