--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,7 +1,14 @@
 $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 $secondary-background: url('../images/overlook-main.jpg');
+$primary-color: rgb(21,23,36);
+$secondary-color: rgb(160,159,179);
+$third-color: rgb(52,30,33);
+$padding-space: 10px 0px 10px 0px;
+$margin-space: 0px 10px 0px 10px;
+
 $single-room: url();
 $junior-suite: url();
 $suite: url();
 $residential-suite: url();
+
 ;
